...
        showFavoritesOnly ? reviews.filter { $0.isFavorite } : reviews
    }

    var body: some View {
        VStack {
            Toggle(isOn: $showFavoritesOnly) {
                Text("Show favourites Only")
                
            }
            .padding()
            .accessibilityIdentifier("Show favourites Only")

            List {
...
